--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,9 @@ typings/
 
 # Serverless directories
 .serverless
+
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
