--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "monkey-in-zoo is a library wrap greasemonkey api for easy to use.",
   "main": "index.js",
   "devDependencies": {
-    "@types/greasemonkey": "4.0.0",
-    "@types/mocha": "^8.0.3",
-    "mocha": "^8.1.3"
+    "@types/greasemonkey": "4.0.2",
+    "@types/mocha": "^9.0.0",
+    "gulp": "^4.0.2",
+    "mocha": "^9.1.1"
   },
   "scripts": {
     "test": "mocha"
